@@ -3,6 +3,9 @@ Thu Dec 12 12:06:59 CET 2002 Jochen Eisinger <c0ffee@penguin-breeder.org>
 	* Don't print signed messages when sending failed.  Affected files
 	  irssi/src/silc/core/silc-[servers.c/commands.h] 
 
+	* Send adquate signal when founding a channel by joing it.  Affect
+	  file irssi/src/silc/core/client_ops.c
+
 Wed Dec 11 21:46:19 CET 2002 Jochen Eisinger <c0ffee@penguin-breeder.org>
 
 	* Fix theme abstracts parsing.  Affected files irssi/default.theme,
